# dc

./: Dockerfile  Dockerfile.coordinator  Dockerfile.node  README.md  docker-compose.yml  exp10.py  exp5.py  exp6.py  exp7.py  exp8.py  exp9.py  main.py  pyproject.toml  run_exp10.py  run_exp5.py  run_exp5_demo.py  run_exp6.py  run_exp7.py  run_exp8.py  run_exp9.py  start_node.py  test_client.py  test_matrix_client.py  test_node.py
exp5_replicas/: worker5.json
src/: __init__.py  cli.py  compute.proto  compute_pb2.py  compute_pb2_grpc.py  config.py  coordinator.py
src/node/: __init__.py  core.py  network.py  servicer.py
tests/: conftest.py  run_all.py  test_basic.py
